--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 # These owners will be the default owners for everything in
 # the repo.
 # Add comment to dismiss stale review
-*       @KirilKabakchiev @dpanayotov
+*       @KirilKabakchiev @dpanayotov @dzahariev
